36125_Gaps between the text are corrected for introLanding-description

--- a/wp-content/themes/EquityX/scss/partials/_intro-section.scss
+++ b/wp-content/themes/EquityX/scss/partials/_intro-section.scss
@@ -265,6 +265,9 @@
 	@include breakpoint(large) {
 		font-size: 22px;
 	}
+	p {
+		margin: 0;
+	}
 	ul, ol {
 		display: inline-block;
 		margin: 0 0 1em 1em;
